2001-08-01  Johan Dahlin  <zilch.am@home.se>

	* src/ui.c (menu_help_about_activate_cb): Make the copyright
	string translatable.

	* src/install.c (install_insert_book): make it look prettier.
	(install_book): Show mime_type with error messages

	* src/book.c (book_get_path): Use gnome_vfs_uri_to_string instead
	of gnome_vfs_uri_get_path.

2001-08-01  Mikael Hallendal  <micke@codefactory.se>

	* src/install.c (install_insert_book): don't freeze/thaw function
	database since it's not changed between the freeze and the thaw.

	* src/bookshelf.c:
	- cleaned up some code in bookshelf_write_xml and
   	  bookshelf_read_xml.
	(bookshelf_write_xml): fix leak.

2001-07-31  Johan Dahlin  <zilch.am@home.se>

	* src/book.c: 
	* src/bookshelf.c: 
	* src/main.c: #include s/libxml/gnome-xml/ beacause it seems to
	work better for a lot of peoples, Thanks goes to Alfons Hoogervorst.

	* src/books-dialog.c (books_button_edit_clicked_cb): If no books
	is installed and Edit book is clicked, return;
	(info_button_ok_clicked_cb): check if book is null. Fixes segfault.

	* configure.in: s/AM_GNU_GETTEXT/AM_GNOME_GETTEXT/. Thanks goes to Yanko Kaneti.

	0.1.0 Released.

	Imported to GNOME CVS.

2001-07-31  Richard Hult  <rhult@codefactory.se>

	* src/main.c (idle_activate_and_search): Eek, data is allowed to
	be NULL so don't g_return_fail.
	(activate_and_search): Only search if search string =! NULL.

	* src/html-widget.c: Include config.h to get i18n working.

	* src/main.c: Clean up a bit and init threads for gnome-vfs.

	* src/main.h: Add search_button to devhelp struct.

	Commented-out code that will be used when the non-autocompletion
	case works:
	* src/ui.c (autocompletion_toggled_cb): Make the search button
	sensitivite if autocompetion is not on.
	(devhelp_create_ui): Set initial sensitivity correctly as well.

2001-07-31  Johan Dahlin  <zilch.am@home.se>

	* configure.in: GTKHTML 0.9.1 & GNOME_VFS 1.0.0 is now reqired.

	* src/install.c (install_book): Remove message.
